# graphrag-ui

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
frontend/static/: accessibility.js  answer-controller.js  api-client.js  app.js  bootstrap.js  core.js  dashboard.js  document-controller.js  document-renderers.js  dom-utils.js  error-handler.js  evidence-renderers.js  history-controller.js  history-renderers.js  index-task-controller.js  index-task-renderers.js  index.html  index.js  index_old.html  loading-components.js  markdown.js  notification-system.js  page-controller.js  performance-utils.js  result-renderers.js  state-manager.js  status-controller.js  status-renderers.js  styles.css  system-status-renderers.js  workflow-controller.js  workflow-renderers.js  workflow-visualizer.js
garbage/tests/unit/: test_sqlite_state_backend_legacy.py  (+2 more)
src/reggraph_assistant/: __init__.py  app.py  citation_audit.py  cli.py  document_manager.py  env_utils.py  error_handlers.py  evaluation.py  evidence.py  graphrag_config.py  index_builder.py  index_tasks.py  indexing.py  llm_client.py  logging_config.py  paths.py  persistence.py  preprocess.py  retrieval.py  schemas.py  service_context.py  settings.py  text_utils.py  workflow.py  workflow_state.py
tests/integration/: test_app_routes_contract.py  test_document_upload_atomicity.py  test_error_handlers.py
tests/unit/: test_app_state_store.py  test_index_publish.py  test_indexing_env_isolation.py  test_preprocess.py
(+17 files in other folders)
