[project]
name = "reggraph-assistant"
version = "0.1.0"
description = "GraphRAG precheck assistant for enterprise registration and business-scope documents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "graphrag==3.0.8",
    "nltk>=3.9.4,<4",
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "pypdf",
    "langgraph>=1.1.9",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "faiss-cpu>=1.7.4",
    "pyarrow>=18.1.0",
]

[project.scripts]
reggraph-assistant = "reggraph_assistant.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pandas-stubs",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["garbage", ".venv", "workspace"]

[tool.ruff]
extend-exclude = ["garbage", ".venv", "workspace"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reggraph_assistant"]

[tool.uv]
package = true
